--- a/Pages/Students/Details.cshtml
+++ b/Pages/Students/Details.cshtml
@@ -29,6 +29,29 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Student.EnrollmentDate)
         </dd>
+        <dd class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Student.Enrollments)
+        </dd>
+        <dd class="col-sm-10">
+            <table class="table">
+                <tr>
+                    <th>Course Title</th>
+                    <th>Grade</th>
+                </tr>
+                @foreach (var i in Model.Student.Enrollments)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(m => i.Course.Title)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(m => i.Grade)
+                        </td>
+                    </tr>
+
+                }
+            </table>
+        </dd>
     </dl>
 </div>
 <div>
